--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <p>
       Somos su aliado y apoyo oportuno para la <strong>GESTIÓN DOCUMENTAL</strong>, fomentando la Educación con Asesorías Técnico Administrativas, 
       evaluando Riesgos Sanitarios al Personal, Instalaciones, Procesos y Medio Ambiente, en pro de asegurar que sus espacios sean saludables, 
-      cumpliendo con sus procesos y requerimientos del Código Sanitario Nacional, exigido por la Secretaría de Salud y Marco Legal Vigente (Ley 9 de 1979).
+      cumpliendo con sus procesos y requerimientos del Código Sanitario Nacional, exigido por la Secretaría de Salud y Marco Legal Vigente (Ley 9 de 1979).<Br>
+       <br> Garantizar el cumplimiento de la Resolución 2674 de 2013.
     </p>
     <a href="#" class="btn-vermas">
       <i class="icono">&#128187;</i> Ver más ...
@@ -83,19 +84,118 @@
   </div>
 </section>
 
+<!-- ===== BANNER SANITARIO ===== -->
+<section class="banner-sanitario">
+  <div class="overlay"></div>
+  <div class="banner-texto">
+    <h2>
+      Nuestro objetivo es apoyarte en la obtención del<br>
+      concepto sanitario favorable para tu empresa.
+    </h2>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN NUESTROS SERVICIOS ===== -->
+<section class="servicios">
+  <h2 class="titulo-seccion">Nuestros Servicios</h2>
+  <p class="subtitulo-seccion">SOLUCIONES SANITARIAS A SU MEDIDA</p>
+
+  <div class="servicios-grid">
+    <!-- Servicio 1 -->
+    <div class="servicio">
+      <a href="#">
+        <img src="img/lab.png" alt="Laboratorio Clínico">
+      </a>
+      <h3>Laboratorio Clínico</h3>
+      <p>
+        Exámenes médicos laborales exigidos por la Secretaría de Salud para ingreso, egreso y renovación del personal activo.
+      </p>
+    </div>
+
+    <!-- Servicio 2 -->
+    <div class="servicio">
+      <a href="#">
+        <img src="img/alimentos.png" alt="Manipulación de Alimentos">
+      </a>
+      <h3>Manipulación De Alimentos</h3>
+      <p>
+        Nuestros cursos garantizan un aprendizaje seguro que impulsa tu desarrollo personal y profesional.
+      </p>
+    </div>
+
+    <!-- Servicio 3 -->
+    <div class="servicio">
+      <a href="#">
+        <img src="img/plaga.png" alt="Control de Plaga">
+      </a>
+      <h3>Control De Plaga</h3>
+      <p>
+        Contamos con las medidas preventivas necesarias para evitar la proliferación de plagas en tus instalaciones.
+      </p>
+    </div>
+
+    <!-- Servicio 4 -->
+    <div class="servicio">
+      <a href="#">
+        <img src="img/aire.png" alt="Calidad del Aire">
+      </a>
+      <h3>Calidad Del Aire INTERIOR</h3>
+      <p>
+        Crucial para la salud y el bienestar de clientes y
+        empleados, garantizando un aire limpio y seguro,
+        implementando controles para población de
+        palomas, ya que inciden al SINDROME DEL
+        EDIFICIO ENFERMO.
+      </p>
+    </div>
+  </div>
+
+  <!-- 🔹 Botón Ver Todos los Servicios -->
+  <div class="servicios-boton">
+    <a href="#" class="btn-ver-servicios">Ver Todos los Servicios</a>
+  </div>
+</section>
+
+<!-- ===== EMPRESAS ALIADAS ===== -->
+<section class="empresas-aliadas">
+  <h2><span class="azul">Empresas Aliadas</span> 
+
+  <div class="logos-aliados">
+    <img src="img/camara.png" alt="Cámara de Comercio de Bogotá">
+    <img src="img/bogota.png" alt="Alcaldía y Secretaría de Salud">
+    <img src="img/lab.png" alt="Colcan">
+    <img src="img/tca.png" alt="Técnica de Control Ambiental TCA">
+    <img src="img/mundogas.png" alt="Mundo Gas Soluciones">
+    <img src="img/eltriunfo.png" alt="Fumigaciones El Triunfo">
+  </div>
+</section>
+
+<!-- ===== BANNER FINAL DE CONTACTO ===== -->
+<section class="banner-contacto">
+  <div class="overlay"></div>
+  <div class="contenido-banner">
+    <a href="../Contacto/Contacto.html" class="texto-contacto">CONTÁCTANOS</a>
+  </div>
+</section>
+
+
+
+
+
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
   <div class="footer-top">
     <div class="footer-item">
       <h3>DIRECCIÓN</h3>
       <span class="footer-line"></span>
-      <p>Bogotá, Col</p>
+      <p>Cra. 39A #33-37, Puente Aranda, Bogotá</p>
     </div>
     <div class="footer-item">
       <h3>ESCRÍBENOS</h3>
       <span class="footer-line"></span>
       <p>320 295 5059</p>
-      <p>grupotermica24@gmail.com</p>
+      <p>601 720 9119</p>
+      <p>Grupotermica2023@gmail.com</p>
     </div>
     <div class="footer-item">
       <h3>HORARIO</h3>
@@ -112,14 +212,14 @@
   <div class="footer-bottom">
     <p>SÍGUENOS EN NUESTRAS REDES SOCIALES</p>
     <div class="social-icons">
-      <a href="https://www.facebook.com/people/Asesoria-Termica/100082814800443/?sk=about&locale=es_LA"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="https://www.instagram.com/asesoriaeduardogomez25/?utm_source=qr&igsh=ZjZtMzh0cTB6Yjk2"><img src="img/instagram.png" alt="Instagram"></a>
-      <a href="https://www.linkedin.com/in/eduardogomezmendigaña2020?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="img/linkedin.png" alt="LinkedIn"></a>
-      <a href="https://w.app/xsh6of"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+      <a href="https://www.facebook.com/people/Asesoria-Termica/100082814800443/?sk=about&locale=es_LA"><img src="img/facebookA.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/asesoriaeduardogomez25/?utm_source=qr&igsh=ZjZtMzh0cTB6Yjk2"><img src="img/instagramA.png" alt="Instagram"></a>
+      <a href="https://www.linkedin.com/in/eduardogomezmendigaña2020?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="img/linkedinA.png" alt="LinkedIn"></a>
+      <a href="https://w.app/xsh6of"><img src="img/whatsappA.png" alt="WhatsApp"></a>
     </div>
     <hr>
     <p>GRUPO TÉRMICA © 2025</p>
-    <p>320 5130 615 | GRUPOTERMICA2023@GMAIL.COM</p>
+    <p>320 295 5059 | GRUPOTERMICA2023@GMAIL.COM</p>
   </div>
 </footer>
 
