--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav id="menu-nav">
       <ul>
         <li><a href="#" class="active">INICIO</a></li>
-        <li><a href="#">NOSOTROS</a></li>
+        <li><a href="Nosotros/nosotros.html">NOSOTROS</a></li>
         <li><a href="#">SERVICIOS</a></li>
         <li><a href="#">CONTACTO</a></li>
         <li><a href="#">PRODUCTOS</a></li>
@@ -60,7 +60,7 @@
     <div class="hero-content">
       <h1>GRUPO TÉRMICA</h1>
       <p>La salud de tu personal está en tus manos.</p>
-      <a href="#" class="btn-contacto">CONTACTO</a>
+      <a href="Contacto/contacto.html" class="btn-contacto">CONTACTO</a>
     </div>
   </section>
 
@@ -74,7 +74,7 @@
       cumpliendo con sus procesos y requerimientos del Código Sanitario Nacional, exigido por la Secretaría de Salud y Marco Legal Vigente (Ley 9 de 1979).<Br>
        <br> Garantizar el cumplimiento de la Resolución 2674 de 2013.
     </p>
-    <a href="#" class="btn-vermas">
+    <a href="Nosotros/nosotros.html" class="btn-vermas">
       <i class="icono">&#128187;</i> Ver más ...
     </a>
   </div>
@@ -103,7 +103,7 @@
   <div class="servicios-grid">
     <!-- Servicio 1 -->
     <div class="servicio">
-      <a href="#">
+      <a href="Servicios/servicios.html">
         <img src="img/lab.png" alt="Laboratorio Clínico">
       </a>
       <h3>Laboratorio Clínico</h3>
@@ -114,7 +114,7 @@
 
     <!-- Servicio 2 -->
     <div class="servicio">
-      <a href="#">
+      <a href="Servicios/servicios.html">
         <img src="img/alimentos.png" alt="Manipulación de Alimentos">
       </a>
       <h3>Manipulación De Alimentos</h3>
@@ -125,7 +125,7 @@
 
     <!-- Servicio 3 -->
     <div class="servicio">
-      <a href="#">
+      <a href="Servicios/servicios.html">
         <img src="img/plaga.png" alt="Control de Plaga">
       </a>
       <h3>Control De Plaga</h3>
@@ -136,7 +136,7 @@
 
     <!-- Servicio 4 -->
     <div class="servicio">
-      <a href="#">
+      <a href="Servicios/servicios.html">
         <img src="img/aire.png" alt="Calidad del Aire">
       </a>
       <h3>Calidad Del Aire INTERIOR</h3>
@@ -152,7 +152,7 @@
 
   <!-- 🔹 Botón Ver Todos los Servicios -->
   <div class="servicios-boton">
-    <a href="#" class="btn-ver-servicios">Ver Todos los Servicios</a>
+    <a href="Servicios/servicios.html" class="btn-ver-servicios">Ver Todos los Servicios</a>
   </div>
 </section>
 
@@ -174,7 +174,7 @@
 <section class="banner-contacto">
   <div class="overlay"></div>
   <div class="contenido-banner">
-    <a href="../Contacto/Contacto.html" class="texto-contacto">CONTÁCTANOS</a>
+    <a href="Contacto/Contacto.html" class="texto-contacto">CONTÁCTANOS</a>
   </div>
 </section>
 
@@ -206,7 +206,7 @@
   </div>
 
   <div class="footer-middle">
-    <button class="btn-contactanos">CONTÁCTANOS</button>
+    <a href="Contacto/contacto.html" class="btn-contactanos">CONTÁCTANOS</a>
   </div>
 
   <div class="footer-bottom">
