--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -54,6 +54,87 @@
     <button id="menu-toggle" aria-label="Abrir menú">&#9776;</button>
   </header>
 
+  <!-- ===== BANNER BAJO HEADER ===== -->
+<section class="banner-sub">
+  <div class="banner-overlay"></div>
+  <div class="banner-content">
+    <h1>Sobre Nosotros</h1>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN QUIÉNES SOMOS ===== -->
+<section class="quienes-somos">
+  <div class="qs-contenedor">
+    <div class="qs-imagen">
+      <img src="../img/L-02.png" alt="Logo Grupo Termica">
+    </div>
+    <div class="qs-texto">
+      <h2>Quiénes somos</h2>
+      <p>
+        Somos su aliado y apoyo oportuno para la <strong>GESTIÓN DOCUMENTAL</strong>,
+        fomentando la educación con asesorías técnico-administrativas,
+        evaluando riesgos sanitarios al personal, instalaciones, procesos y medio ambiente,
+        en pro de asegurar que sus espacios sean saludables, cumpliendo con sus procesos
+        y requerimientos del Código Sanitario Nacional, exigido por Secretaría de Salud
+        y Marco Legal Vigente (Ley 9 de 1979).
+      </p>
+      <p>
+        Garantizar el cumplimiento de la Resolución 2674 de 2013.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN VISIÓN ===== -->
+<section class="vision">
+  <div class="vision-contenedor">
+    <div class="vision-texto">
+      <div class="vision-titulo">
+        <img src="../img/vision-icon.png" alt="Icono Visión">
+        <h2>Visión</h2>
+      </div>
+      <p>
+        Lograr asegurar la <strong>CONTINUIDAD DE SU NEGOCIO</strong> considerando:<br>
+        Ejecutar tareas de Servicio Médico Preventivo a nuevo ingreso de personal y activo.<br>
+        Capacitaciones continuas para fortalecer el crecimiento profesional de su personal.<br>
+        Apoyo a planes y programas de saneamiento y manejo integrado de control de plagas urbanas.<br>
+        Garantizar la calidad del aire interior, con diagnóstico de ventilación adecuada,
+        según leyes vigentes y la incidencia por el manejo y resguardo de población de palomas.
+        “Normas contra el <em>Síndrome del Edificio Enfermo</em>”.
+      </p>
+    </div>
+
+    <div class="vision-imagen">
+      <img src="../img/vision.png" alt="Imagen Visión">
+    </div>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN MISIÓN ===== -->
+<section class="mision">
+  <div class="mision-contenedor">
+    <div class="mision-imagen">
+      <img src="../img/mision.png" alt="Imagen Misión">
+    </div>
+
+    <div class="mision-texto">
+      <div class="mision-titulo">
+        <img src="../img/mision-icon.png" alt="Icono Misión">
+        <h2>Misión</h2>
+      </div>
+      <p>
+        <strong>Grupo Térmica</strong> es una empresa al <strong>SERVICIO DEL CONTROL SANITARIO</strong>,
+        incluyendo acompañamiento en cuatro pilares principales:
+      </p>
+      <ul>
+        <li><strong>I.</strong> Toma de muestras domiciliarias de laboratorio clínico.</li>
+        <li><strong>II.</strong> Capacitación y entrenamiento continuo laboral.</li>
+        <li><strong>III.</strong> Gestión de riesgos y controles sanitarios.</li>
+        <li><strong>IV.</strong> Calidad del aire interior por ventilación y control de palomas.</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 
 
