--- a/Producto/producto.html
+++ b/Producto/producto.html
@@ -54,6 +54,98 @@
     <button id="menu-toggle" aria-label="Abrir menú">&#9776;</button>
   </header>
 
+  <!-- ===== BANNER PRODUCTOS ===== -->
+<section class="banner-productos">
+  <div class="overlay"></div>
+  <div class="banner-contenido">
+    <h2>Todos los Productos</h2>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN AUTOCUIDADO PERSONAL ===== -->
+<section class="productos-section">
+  <h2>Autocuidado Personal</h2>
+  <div class="productos-grid">
+    <div class="producto-card">
+      <img src="../img/A1.png" alt="Safety NK95">
+      <h3>Safety NK95</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A2.png" alt="Dispensador de Gel">
+      <h3>Dispensador de Gel</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A3.png" alt="Cartelera Informativa">
+      <h3>Cartelera Informativa</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A4.png" alt="Cortina de Desinfección">
+      <h3>Cortina de Desinfección</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A5.png" alt="Huellas Calzado Desinfectantes">
+      <h3>Huellas Calzado Desinfectantes</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A6.png" alt="Gorra Caretas Protectoras">
+      <h3>Gorra Caretas Protectoras</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A7.png" alt="Careta Acrílica 2mm">
+      <h3>Careta Acrílica 2mm</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/A8.png" alt="Tapete de Caucho Antideslizante">
+      <h3>Tapete de Caucho Antideslizante</h3>
+    </div>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN LIMPIEZA ===== -->
+<section class="productos-section">
+  <h2>Limpieza</h2>
+  <div class="productos-grid">
+    <div class="producto-card">
+      <img src="../img/l1.png" alt="Braga Desechables">
+      <h3>Braga Desechables</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/l2.png" alt="Guantes Desechables">
+      <h3>Guantes Desechables</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/l3.png" alt="Amonio Cuaternario">
+      <h3>Amonio Cuaternario</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/l4.png" alt="Kit de Desinfección">
+      <h3>Kit de Desinfección</h3>
+    </div>
+  </div>
+</section>
+
+<!-- ===== SECCIÓN FERROAGRO ===== -->
+<section class="productos-section">
+  <h2>FerroAgro</h2>
+  <div class="productos-grid">
+    <div class="producto-card">
+      <img src="../img/f1.png" alt="Barrera Anti-Plaga">
+      <h3>Barrera Anti-Plaga</h3>
+    </div>
+    <div class="producto-card">
+      <img src="../img/f2.png" alt="Lámpara Lineal">
+      <h3>Lámpara Lineal</h3>
+    </div>
+  </div>
+</section>
+
+<!-- ===== BOTÓN DESCARGAR CATÁLOGO ===== -->
+<div class="catalogo-container">
+  <a href="../docs/catalogo-grupo-termica.pdf" download class="btn-catalogo">
+    📘 Descargar Catálogo
+  </a>
+</div>
+
 
 
 
