--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <ul>
         <li><a href="#" class="active">INICIO</a></li>
         <li><a href="Nosotros/nosotros.html">NOSOTROS</a></li>
-        <li><a href="#">SERVICIOS</a></li>
-        <li><a href="#">CONTACTO</a></li>
-        <li><a href="#">PRODUCTOS</a></li>
-        <li><a href="#">BLOG</a></li>
+        <li><a href="Servicios/servicios.html">SERVICIOS</a></li>
+        <li><a href="Contacto/contacto.html">CONTACTO</a></li>
+        <li><a href="Producto/producto.html">PRODUCTOS</a></li>
+        <li><a href="Blog/blog.html">BLOG</a></li>
       </ul>
     </nav>
 
@@ -227,5 +227,6 @@
   <script src="inicio/index.js"></script>
 </body>
 </html>
+
 
 
