--- a/Servicios/servicios.html
+++ b/Servicios/servicios.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grupo Térmica</title>
+  <title>Servicios | Grupo Térmica</title>
+  <link rel="icon" type="image/png" href="../img/Logo.png">
   <link rel="stylesheet" href="servicios.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,10 +55,126 @@
     <button id="menu-toggle" aria-label="Abrir menú">&#9776;</button>
   </header>
 
+  <!-- ====== BANNER DE SERVICIOS ====== -->
+<section class="banner-servicios">
+  <h2>NUESTROS SERVICIOS</h2>
+</section>
 
 
 
+<!-- ====== SECCIÓN TARJETAS ====== -->
+<section class="servicios-dinamicos">
+  <div class="servicios-grid">
+    <!-- ===== Bloque 1 ===== -->
+    <div class="servicio-card">
+      <h3>Laboratorio Clínico</h3>
+      <select class="servicio-select">
+        <option value="">Selecciona un servicio</option>
+        <option value="hematologia">Hematología</option>
+        <option value="bacteriologia">Bacteriología</option>
+        <option value="toxicologia">Toxicología</option>
+      </select>
+      <div class="servicio-info"></div>
+    </div>
 
+    <!-- ===== Bloque 2 ===== -->
+    <div class="servicio-card activo">
+      <h3>Manipulación de Alimentos</h3>
+      <select class="servicio-select">
+        <option value="">Selecciona un servicio</option>
+        <option value="capacitacion">Capacitaciones</option>
+        <option value="certificado">Certificados</option>
+        <option value="inspeccion">Inspecciones Sanitarias</option>
+      </select>
+      <div class="servicio-info"></div>
+    </div>
+
+    <!-- ===== Bloque 3 ===== -->
+    <div class="servicio-card">
+      <h3>Control de Plagas</h3>
+      <select class="servicio-select">
+        <option value="">Selecciona un servicio</option>
+        <option value="fumigacion">Fumigación General</option>
+        <option value="desratizacion">Desratización</option>
+        <option value="sanitizacion">Sanitización Industrial</option>
+      </select>
+      <div class="servicio-info"></div>
+    </div>
+  </div>
+</section>
+
+<section class="servicio-detalle">
+  <div class="servicio-contenedor">
+    <div class="servicio-imagen">
+      <img src="../img/horeca.png" alt="Servicio HORECA">
+    </div>
+
+    <div class="servicio-texto">
+      <h2>Soluciones Sanitarias Para el Canal HORECA y Afines.</h2>
+      <p>
+        De manera estratégica acompañamos al empresario a asumir las responsabilidades para garantizar 
+        las normas y la seguridad sanitarias de su establecimiento, beneficiando a todos los ciudadanos, 
+        con <strong>Atención Personalizada.</strong>
+      </p>
+      <a href="../Contacto/contacto.html" class="btn-servicio">Contratar</a>
+    </div>
+  </div>
+</section>
+
+<section class="bloque-servicios-empresariales">
+
+  <!-- 🔹 TEXTO SUPERIOR -->
+  <div class="bloque-frase">
+    <p>“CUMPLE CON LAS NORMAS SANITARIAS Y EVITA SANCIONES, <br> MULTAS O CIERRES.”</p>
+  </div>
+
+  <!-- 🔹 TARJETAS -->
+  <div class="bloque-grid">
+    
+    <div class="bloque-card">
+      <img src="../img/incalab.png" alt="Manipulación de alimentos">
+      <h3>Manipulación de alimentos</h3>
+      <p>
+        Nuestros cursos garantizan y aseguran su desarrollo personal y profesional. 
+        Nos caracterizamos por ofrecer un enfoque Teórico–Práctico y Sincrónico (Presencial / Virtual).
+      </p>
+      <a href="https://w.app/xsh6of" class="bloque-btn">CONTRATAR</a>
+    </div>
+
+    <div class="bloque-card">
+      <img src="../img/control-plagas.png" alt="Control de plagas">
+      <h3>Control de plagas</h3>
+      <p>
+        Nuestro servicio cuenta con recursos, medidas necesarias y preventivas, 
+        para adelantarnos a posibles proliferaciones de plagas en sus instalaciones.
+      </p>
+      <a href="https://w.app/xsh6of" class="bloque-btn">CONTRATAR</a>
+    </div>
+
+    <div class="bloque-card">
+      <img src="../img/senalizacion.png" alt="Señalización">
+      <h3>Señalización</h3>
+      <p>
+        En <strong>Grupo Térmica</strong>, entendemos que la señalización es mucho más que simples letreros. 
+        Es una herramienta poderosa que guía, informa, asegura y fortalece la identidad de su negocio.
+      </p>
+      <a href="https://w.app/xsh6of" class="bloque-btn">COTIZAR</a>
+    </div>
+
+    <div class="bloque-card">
+      <img src="../img/ferroagro.png" alt="FerroAgroTienda">
+      <h3>FerroAgroTienda</h3>
+      <p>
+        Productos, insumos, equipos y asesoría técnica enfocados en soluciones para el control sanitario, 
+        bioseguridad y control de plagas urbanas, alineados con normativas como la Resolución 2674 de 2013.
+      </p>
+      <a href="../Producto/producto.html" class="bloque-btn">VER PRODUCTOS</a>
+    </div>
+
+  </div>
+</section>
+
+<section class="bunker-final"></section>
 
 
 <!-- ===== FOOTER ===== -->
