--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grupo Térmica</title>
+  <title>Inicio | Grupo Térmica</title>
+  <link rel="icon" type="image/png" href="img/Logo.png">
   <link rel="stylesheet" href="inicio/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
